@@ -877,8 +877,9 @@ proc_arity(VALUE self)
 static inline int
 rb_iseq_min_max_arity(const rb_iseq_t *iseq, int *max)
 {
-    *max = (iseq->arg_rest == -1 && iseq->arg_keyword == -1) ?
-        iseq->argc + iseq->arg_post_len + iseq->arg_opts - (iseq->arg_opts > 0)
+    *max = iseq->arg_rest == -1 ?
+	iseq->argc + iseq->arg_post_len + iseq->arg_opts -
+	(iseq->arg_opts > 0) + (iseq->arg_keyword != -1)
       : UNLIMITED_ARGUMENTS;
     return iseq->argc + iseq->arg_post_len;
 }
